@@ -1287,6 +1287,17 @@
       </component>
     </version>
   </module>
+  <module name="gnome-terminal">
+    <version release="gnome-2.0-core">
+      <component name="gnome-terminal" dir="gnome-terminal">
+        <podir dir="po"/>
+        <potname name="gnome-terminal.pot"/>
+        <branch name="gnome-2-0"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
   <module name="gnome-utils">
     <version release="gnome-1.4-core">
       <component name="gnome-utils" dir="gnome-utils">
@@ -2075,17 +2086,6 @@
         <podir dir="po"/>
         <potname name="gnome-system-monitor.pot"/>
         <branch name="HEAD"/>
-        <regenerate/>
-        <download/>
-      </component>
-    </version>
-  </module>
-  <module name="profterm">
-    <version release="gnome-2.0-core">
-      <component name="profterm" dir="profterm">
-        <podir dir="po"/>
-        <potname name="gnome-terminal.pot"/>
-        <branch name="gnome-2-0"/>
         <regenerate/>
         <download/>
       </component>
