@@ -1,5 +1,9 @@
 2002-09-16  Christian Rose  <menthos@menthos.com>
 
+	* translation-status.xml: Renamed profterm to gnome-terminal.
+
+2002-09-16  Christian Rose  <menthos@menthos.com>
+
 	* translation-status.xml: Fixed branch for libwnck.
 
 2002-09-10  Carlos Perello Marin <carlos@gnome-db.org>
